Fixed meta weird spacing

--- a/src/meta.css
+++ b/src/meta.css
@@ -22,8 +22,8 @@
 }
 
 .ts-meta .item:not(:last-child)::after {
-    margin: 0 0.25rem;
-    content: "·";
+    margin: 0 0;
+    content: "．";
     color: var(--ts-gray-500);
     text-decoration: none;
     pointer-events: none;
